--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -58,6 +58,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>Pch.h</PrecompiledHeaderFile>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -75,6 +76,7 @@
       <LanguageStandard>stdcpp17</LanguageStandard>
       <PrecompiledHeader>Create</PrecompiledHeader>
       <PrecompiledHeaderFile>Pch.h</PrecompiledHeaderFile>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -84,6 +86,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Pch.cpp" />
     <ClCompile Include="ReflectInjector.cpp" />
@@ -94,6 +97,7 @@
     <ClInclude Include="Event.hpp" />
     <ClInclude Include="EventManager.hpp" />
     <ClInclude Include="AbstractMemoryManager.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="Pch.h" />
     <ClInclude Include="ReflectInjector.h" />
     <ClInclude Include="Singleton.hpp" />
