--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Pch.cpp" />
     <ClCompile Include="ReflectInjector.cpp" />
+    <ClCompile Include="StandardMemoryManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractInjector.h" />
@@ -101,6 +102,7 @@
     <ClInclude Include="Pch.h" />
     <ClInclude Include="ReflectInjector.h" />
     <ClInclude Include="Singleton.hpp" />
+    <ClInclude Include="StandardMemoryManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
